--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
   </div>
 
   <div class="topnav">
-    <a href="index.html">Inicio</a>
-    <a href="productos.html">Productos</a>
-    <a href="promociones.html">Promociones</a>
+    <a href="https://michellemembrila.github.io/ProyectoDW/">Inicio</a>
+    <a href="https://michellemembrila.github.io/ProductosDW/">Productos</a>
+    <a href="https://michellemembrila.github.io/PromocionesDW/">Promociones</a>
   </div>
 
   <div class="row">
