--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
     </div>
   </div>
 
-  <div class="footer">
+   <div class="footer">
     <h2>Farmacia "El Frasco Feliz" &copy; 2024</h2>
-  </div>
+    <div class="social-icons">
+      <a href="https://www.instagram.com" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com" target="_blank">Facebook</a>
+      <a href="https://www.twitter.com" target="_blank">Twitter</a>
+    </div>
 </body>
 </html>
