--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         float: none;
         width: 100%;
       }
+      .leftcolumn, .rightcolumn {
+        width: 100%; /* Ambas columnas ocupan el 100% del ancho */
+        float: none; /* Se colocan una debajo de la otra */
+      }
     }
     .image-gallery {
       display: flex;
@@ -124,7 +128,7 @@
     </div>
   </div>
 
-   <div class="footer">
+  <div class="footer">
     <h2>Farmacia "El Frasco Feliz" &copy; 2024</h2>
     <div class="social-icons">
       <a href="https://www.instagram.com" target="_blank">Instagram</a>
